--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
             <h1><span class="name-color">Ayon Hasan</span> World!</h1>
             <h3>Your Frindly neighbourhood hacker :P</h3>
             <p>I am working in the Cyber Security space for over 5 years now. I do bug bounites and I have helped so
-                many
-                comapnies to make their system secure.</p>
+                many comapnies to make their system secure.</p>
+
+            <a class="anchor-button" target="_blank" href="https://www.facebook.com/lollipop1337">HIRE ME</a>
         </div>
+
 
         <div class="first-page">
             <img src="img/header-image.png" />
