--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="top-banner">
         <div class="first-page">
             <h1>Welcome To</h1>
             <h1><span class="name-color">Ayon Hasan</span> World!</h1>
@@ -22,6 +22,7 @@
                 many comapnies to make their system secure.</p>
 
             <a class="anchor-button" target="_blank" href="https://www.facebook.com/lollipop1337">HIRE ME</a>
+
         </div>
 
 
