--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <section class="top-banner">
-        <div class="first-page">
+        <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="name-color">Ayon Hasan</span> World!</h1>
             <h3>Your Frindly neighbourhood hacker :P</h3>
@@ -25,9 +25,31 @@
 
         </div>
 
-
-        <div class="first-page">
+        <div class="half-width">
             <img src="img/header-image.png" />
+        </div>
+    </section>
+
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="img/dream-big.png" alt="">
+        </div>
+
+        <div class="half-width">
+
+            <h1>Dream Big</h1>
+            <h2>To become a Great Hacker</h2>
+            <p>I have loved computers since my childhood, and computers understand me well. After learning about things
+                in computers, I found there is a thing called hacking, and I got interested in it and started learning
+                how to do that and about it.
+                After all these years, I can call myself a hacker, but still, I don't know many things. I don't think I
+                will be able to learn everything in my lifetime, but I am constantly learning and trying to become a
+                better hacker; that kid from childhood is still alive, and I want to become a better hacker and work
+                very hard for that.
+            </p>
+            <br>
+            <a class="anchor-button" target="_blank" href="https://github.com/lollipopl337/cv">Download Resume</a>
+
         </div>
     </section>
 </body>
